major changes overall